# wireplumber-scripts

./: .gitignore  .luacheckrc  Cargo.toml  Makefile  README.adoc  ci.nix  default.nix  derivation.nix  flake.nix  lock.nix  shell.nix
.github/workflows/: wireplumber-scripts.yml
json-config/: Cargo.toml
json-config/src/: lib.rs
lib/: params.lua  require.lua  wp.lua
lib/scripts/: link-volume.lua  static-link.lua
lib/util/: init.lua  table.lua
lib/wp/: params.lua
lib/wp/proxy/: device.lua  init.lua  link.lua  node.lua
loader/: require.lua
src/: example.lua  link-volume.lua  static-link.lua
static-link/: Cargo.toml
static-link/src/: lib.rs  link_volume.rs
testing/: json-config.lua  static-link.lua  test.sh
tests/: static.lua
