[package]
name = "wpscripts-json-config"
version = "0.1.0"
authors = ["arcnmx"]
edition = "2018"

include = [
	"/src/**",
	"/README*",
	"../COPYING*",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
wireplumber = { version = "0.1", features = ["futures", "libspa", "serde", "v0_4_3"], git = "https://github.com/arcnmx/wireplumber.rs" }
glib = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
