[package]
name = "wpscripts-static-link"
version = "0.1.0"
authors = ["arcnmx"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
wireplumber = { version = "0.1", features = ["enable-futures", "enable-libspa", "enable-serde", "experimental", "v0_4_3"], git = "https://github.com/arcnmx/wireplumber.rs" }
glib = { version = "0.16", git = "https://github.com/gtk-rs/gtk-rs-core" }
serde = { version = "1.0", features = ["derive"] }
