[package]
name = "wpscripts-static-link"
version = "0.1.0"
authors = ["arcnmx"]
edition = "2018"

include = [
	"/src/**",
	"/README*",
	"../COPYING*",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
wireplumber = { version = "0.1", features = ["futures", "glib-signal", "libspa", "serde", "experimental", "v0_4_3"], git = "https://github.com/arcnmx/wireplumber.rs" }
glib = "0.17"
serde = { version = "1.0", features = ["derive"] }
